[package]
name = "generate-import-state-sql"
version = "1.0.0"
authors = ["Nigel Banks <nigel.g.banks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_ftp = { version = "4.0.4", features = ["secure"] }
clap = "2.33.3"
csv = "1.1.5"
filetime = "0.2"
quick-xml = { version = "0.20.0" }
rustls = { version = "0.17.0", features = ["dangerous_configuration"] } # Features is needed to ignore validation.
serde = { version = "1.0.118", features = ["derive"] }
tokio = { version = "0.2.24", features = ["macros", "rt-threaded"] }
tokio-rustls = { version = "0.13.1" }

[dependencies.reqwest]
version = "*"
default-features = false

[profile.release]
lto = true       # Link Time Optimizations
panic = 'abort'  # No stack trace on error.